# SC8815_Portable_Power

./: .gitmodules  README.md
Hardware/Boardview/: SC8815_Portable_Power_1v0.brd  Top_Portable_Power_2v0.brd
Hardware/Production/SC8815_Portable_Power_1v0/: bom.csv  designators.csv  netlist.ipc  positions.csv
Hardware/Production/Top_Portable_Power_2v0/: bom.csv  designators.csv  netlist.ipc  positions.csv
Software/EmbedSoftware/CH32L103_Power_1v1/: .cproject  .project  .template  CH32L103_Power_1v1.launch  CH32L103_Power_1v1.wvproj
Software/EmbedSoftware/CH32L103_Power_1v1/.mrs/: 3812c2cdcdff435089470f0700360d57-.snapshot  CH32L103_Power_1v0-1766846408117.mrs-workspace  CH32L103_Power_1v0-1778588184843.mrs-workspace  CH32L103_Power_1v0-1779190377799.mrs-workspace  CH32L103_Power_1v0.mrs-workspace  CH32L103_Power_1v1.mrs-workspace  b226d1a0f4bf01f602a340ec26386b56-.snapshot  launch.json
Software/EmbedSoftware/CH32L103_Power_1v1/Hardware/inc/: SC8815.h  adc_conv.h  comm_frames.h  comm_powerctrl.h  comm_uart.h  ina226.h  ina226_user.h  mcu_flash.h  power_data.h  sc8815_user.h  sf_i2c.h  usbpd_sink.h
Software/EmbedSoftware/CH32L103_Power_1v1/Hardware/src/: adc_conv.c  comm_frames.c  comm_powerctrl.c  comm_uart.c  ina226.c  ina226_user.c  mcu_flash.c  sc8815.c  sc8815_user.c  sf_i2c.c  usbpd_sink.c
Software/EmbedSoftware/CH32L103_Power_1v1/USB/inc/: ch32l103_usbfs_device.h  usbd_cdc_data.h  usbd_desc.h
Software/EmbedSoftware/CH32L103_Power_1v1/USB/src/: ch32l103_usbfs_device.c  usbd_cdc_data.c  usbd_desc.c
Software/EmbedSoftware/CH32L103_Power_1v1/User/inc/: FreeRTOSConfig.h  ch32l103_conf.h  ch32l103_it.h  ch32l103x_bsp.h
Software/EmbedSoftware/CH32L103_Power_1v1/User/src/: ch32l103_it.c  ch32l103x_bsp.c  main.c  system_ch32l103.c
Software/EmbedSoftware/CH32L103_Power_1v1/mpaland-printf/: printf.c  printf_config.h
Software/EmbedSoftware/Top_Power_2v1/: CMakeLists.txt  partitions.csv
Software/EmbedSoftware/Top_Power_2v1/components/comm_power/: CMakeLists.txt
Software/EmbedSoftware/Top_Power_2v1/components/comm_power/inc/: comm_powerctrl.h  power_data.h
Software/EmbedSoftware/Top_Power_2v1/components/comm_power/src/: comm_frames.c  comm_powerctrl.c  comm_uart.c  power_data.c
Software/EmbedSoftware/Top_Power_2v1/components/guiguider/: CMakeLists.txt
Software/EmbedSoftware/Top_Power_2v1/components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_helpers.h
Software/EmbedSoftware/Top_Power_2v1/components/lvgl_esp32_drivers/lvgl_tft/: Kconfig  disp_driver.c  disp_spi.c  (+4 more)
Software/EmbedSoftware/Top_Power_2v1/components/lvgl_keypad/: CMakeLists.txt  lvgl_key.c  lvgl_key.h  rotaryencoder.c  rotaryencoder.h
Software/EmbedSoftware/Top_Power_2v1/components/wifi/: CMakeLists.txt  Kconfig  PowerServer.html  index.html  wifi_webserver.c  wifi_webserver.h
Software/EmbedSoftware/Top_Power_2v1/components/wifi/inc/: wifi_station.h
Software/EmbedSoftware/Top_Power_2v1/components/wifi/src/: wifi_station.c
Software/EmbedSoftware/Top_Power_2v1/main/: CMakeLists.txt  idf_component.yml  lvgl_user.c  lvgl_user.h  top_power_main.c
(+3 files in other folders)
